# polymarker-webui

./: .gitignore  INSTALL.md  README.md  json_post_test.py  polymarker-webui.service  pyproject.toml  scratch.md
etc/: nginx  polymarker-webui.service
genome_configs/: 160802_Svevo_v2_pseudomolecules.yaml  161010_Chinese_Spring_v1.0_pseudomolecules.yaml  161010_Chinese_Spring_v1.0_pseudomolecules_tetraploid.yaml  19082024_paragon_v3.yaml  201216_Fielder_pseudomolecules_V1+unanchored_contigs.yaml  2492024_cadenza_v2.yaml  Brassica_napus_v4.1.chromosomes.yaml  Brassica_oleracea.BOL.dna_sm.toplevel.yaml  Brassica_rapa.Brapa_1.0.dna_sm.toplevel.yaml  Cadenza_EIv1.1.yaml  Claire_EIv1.1.yaml  Glycine_max.Glycine_max_v2.1.dna_rm.toplevel.yaml  Hordeum_vulgare.IBSC_v2.dna.toplevel.yaml  Kronos.collapsed.chromosomes.masked.v1.1.yaml  Kronos_EIv1.1.yaml  Paragon_EIv1.1.yaml  Robigus_EIv1.1.yaml  Secale_cereale_Lo7_v2_Sc.dna.genome.yaml  Triticum_aestivum.IWGSC.dna_rm.toplevel.yaml  WheatTu.genome.yaml  fail.yaml  iwgsc_refseqv2.1_assembly.yaml  multi.yaml
pmwui/: __init__.py  app.py  db.py  done_test.py  gc.py  init.py  json_post_test.py  post_process_masks.py  ref.py  resultdb.py  run.py  scheduler.py  submit.py
pmwui/static/: application-95ca484a9d266310e628.js  application.self-48e310ec26832887a00f4f1c9a8c7c5ec57e2ba7c5b8.js  jsgrid.self-856a4cc4f01b89070352011686d00579094b87470b858d09.css  msa.self-faf6a0529fd04e6b439f675b07cf5b8b208268e0e8fdafcaa82.css  snp_files.self-1ab15d92fd582ce3cb5f24c442b53bb7eb0ad32075e2c.css  style.css  test.txt  theme.self-d95c9f909da0b9f117f3da3dfbbcd2f70a595b821328e4394.css  w2ui.self-e8142cdb0caefd421845bcf63740a29aa56245aedb82b5d035.css
pmwui/templates/: about.html  cite.html  designed.html  index.html  index2.html  ref.html  res.html  result.html
static/: test.txt
