[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"


[project]
name = "pmwui"
version = "0.0.3"
description = "A web interface for polymarker"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
# keywords = ["sample", "setuptools", "development"]
authors = [{ name = "Rob Ellis", email = "rob.ellis@jic.ac.uk" }]
maintainers = [
  { name = "Rob Ellis", email = "rob.ellis@jic.ac.uk" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]
dependencies = ["flask"]
# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Reports" = "https://github.com/pypa/sampleproject/issues"
# "Funding" = "https://donate.pypi.org"
# "Say Thanks!" = "http://saythanks.io/to/example"
# "Source" = "https://github.com/pypa/sampleproject/"
[project.scripts]
pmwui = "pmwui:main"