[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pmwui"
version = "0.0.28"
description = "A web interface for polymarker"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
# keywords = ["sample", "setuptools", "development"]
authors = [{ name = "Rob Ellis", email = "rob.ellis@jic.ac.uk" }]
maintainers = [
    { name = "Rob Ellis", email = "rob.ellis@jic.ac.uk" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    'gunicorn',
    'flask',
    'flask_mail',
    'mariadb',
    'markdown',
    'pyyaml',
    'requests',
    'werkzeug'
]

[project.urls]
"Homepage" = "https://polymarker.jic.ac.uk"
"Bug Reports" = "https://github.com/cb2e6f/polymarker-webui/issues"
"Source" = "https://github.com/cb2e6f/polymarker-webui/"

[project.scripts]
pmwui = "pmwui:main"
